--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <li class="cabecalho-inten">trabalho</li>
         <li class="cabecalho-inten">estudante
         </ul>
-    </header>
+    </header> 
+    <section>
+        <img src="" alt="">
+    </section>
 </body>
     
  </html>
