--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </header> 
     <section>
-        <img src="" alt="">
+        <img src="images.png" alt="gaviao">
     </section>
 </body>
     
